# eduPulse

./: .gitignore  LICENSE  README.md  alembic.ini  omr_processor.py  pyproject.toml  start.bat
.agents/: AGENTS.md  skills.json
alembic/: env.py
app/: __init__.py  config.py  dependencies.py  main.py
app/api/v1/: attendance.py  auth.py  automation.py  (+11 more)
app/core/: base_model.py  concurrency.py  database.py  exceptions.py  plugin_registry.py  security.py
app/engines/: base_engine.py  math_engine.py  omr_engine.py
app/models/: __init__.py  academic.py  attendance.py  grading.py  merit.py  notification.py  schedule.py  school.py  student.py  teacher.py  user.py
app/schemas/: academic.py  attendance.py  auth.py  common.py  grading.py  merit.py  notification.py  schedule.py  school.py  student.py  teacher.py  user.py
app/services/: attendance_service.py  auth_service.py  automation_service.py  class_service.py  grading_service.py  merit_service.py  notification_service.py  ocr_service.py  omr_processor.py  schedule_service.py  school_service.py  student_service.py  teacher_service.py  user_service.py
app/static/: app.js  dashboard.html  dashboard.js  feedback.html  index.html  styles.css
scripts/: create_admin.py  seed_data.py
tests/: conftest.py  run_e2e_qa.py  test_attendance_warnings.py  test_automation.py  test_batch_omr_history.py  test_frontend_assets.py  test_judge_login.py  test_logic_lens_fixes.py  test_merit_api.py  test_notifications.py  test_ocr_service.py  test_omr_storage_cleanup.py  test_qa_suite.py  test_sms_notification.py  test_webhooks.py
(+13 files in other folders)
